<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_theme_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMapCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:visibility="gone" />

        <com.elluminati.eber.components.CustomEventMapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.elluminati.eber.components.CustomEventMapView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardWhereTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_bill_second_top"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/dimen_bill_second_top"
            android:background="@color/color_white"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:id="@+id/llMapAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_pickup_dest" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">


                    <com.elluminati.eber.components.MyFontTextView
                        android:id="@+id/tvMapPickupAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/activity_horizontal_padding"
                        android:layout_marginEnd="@dimen/activity_horizontal_padding"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/text_pickup_address"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general_small" />

                    <com.elluminati.eber.components.MyFontTextView
                        android:id="@+id/tvMapDestinationAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_padding"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/text_destination_address"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general_small" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWhereToGo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_bill_second_top"
                    app:srcCompat="@drawable/ic_dot_black_24dp" />


                <com.elluminati.eber.components.MyFontTextView
                    android:id="@+id/tvWhereTogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_bill_second_top"
                    android:text="@string/text_where_to_go"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_general"
                    android:transitionName="@string/toolbar_transient" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/llFavouriteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/llAddAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_padding"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_padding"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:visibility="gone"
                    app:backgroundTint="@color/color_app_button"
                    app:srcCompat="@drawable/add_btn" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/llHomeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_padding"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_padding"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:visibility="gone"
                    app:backgroundTint="@color/color_app_button"
                    app:srcCompat="@drawable/home_btn" />



                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/llWorkAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_padding"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_padding"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:visibility="gone"
                    app:backgroundTint="@color/color_app_button"
                    app:srcCompat="@drawable/work_btn" />


            </LinearLayout>

            <com.elluminati.eber.components.MyFontTextView
                android:id="@+id/tvCheckOurDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/color_white"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text_check_delviery"
                android:textAlignment="center"
                android:textColor="@color/color_black"
                android:textSize="@dimen/size_general" />
        </LinearLayout>


    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ivTargetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="80dp"
        app:backgroundTint="@color/color_white"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_my_location_black_24dp" />


    <include layout="@layout/bottom_sheet_vehicle" />

    <include layout="@layout/bottomsheet_trip_planing" />

    <LinearLayout
        android:id="@+id/llRequestFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:clickable="true"
        android:gravity="top|end"
        android:paddingTop="80dp">

        <include layout="@layout/dialog_request_filter" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>